// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`password (isCI = false) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > clears input on error when clearOnError is true 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  ▪
└  Error
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  ▪_
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > renders and clears validation errors 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  ▪
└  Password must be at least 2 characters
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  ▪▪_
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > renders cancelled value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  ▪
│",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > renders custom mask 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  *_",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  **_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  **",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > renders masked value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = false) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > can be aborted by a signal 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > clears input on error when clearOnError is true 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  ▪
└  Error
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  ▪_
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > renders and clears validation errors 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "▲  foo
│  ▪
└  Password must be at least 2 characters
",
  "[999D[4A",
  "[1B",
  "[J",
  "◆  foo
│  ▪▪_
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > renders cancelled value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "■  foo
│  ▪
│",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > renders custom mask 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  *_",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  **_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  **",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > renders masked value 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪_",
  "[2B",
  "[999D[4A",
  "[2B",
  "[2K[G",
  "│  ▪▪_",
  "[2B",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│  ▪▪",
  "
",
  "[?25h",
]
`;

exports[`password (isCI = true) > renders message 1`] = `
[
  "[?25l",
  "│
◆  foo
│  _
└
",
  "[999D[4A",
  "[1B",
  "[J",
  "◇  foo
│",
  "
",
  "[?25h",
]
`;
